--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </header>
 
   <div class="welcome">
-    <p>Welcome to the official Children Fantasy League website! Enjoy the colourful cricketing journey.</p>
+    <p>Welcome to the Children Fantasy League official website!.</p>
   </div>
 
   <div id="homePage">
