--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </header>
 
   <div class="welcome">
-    <p>Welcome to the Children Fantasy League official website!.</p>
+    <p1>Welcome to the Children Fantasy League official website!.</p1>
   </div>
 
   <div id="homePage">
