--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
 </head>
 <body>
   <header>
-    <img src="cfl-logo.png" alt="CFL Logo" width="100">
+    <img src="cfl-logo.png" alt="CFL Logo" width="60">
     <h1>Children Fantasy League</h1>
   </header>
 
   <div class="welcome">
-    <p1>Welcome to the Children Fantasy League official website!.</p1>
+    <p>Welcome to the Children Fantasy League official website!.</p>
   </div>
 
   <div id="homePage">
