--- a/index.html
+++ b/index.html
@@ -122,12 +122,24 @@
 
   <div class="welcome">
     <h1>Welcome to the CFL official website!.</h1>
-    <p>*CFL_6* 🎾🏏 ```Coming Soon```
-
-سي ايف ايل کا چھٹا ایڈیشن جلد شروع ھو رہا ہے
-اگر کسی میمبر کو کوٸي راۓ دینی ہو یا کو بات کرنی ہو ٹورنامینٹ کے حوالے سے وہ گروپ ایڈمن سے ان بوکس مین رابتا کرے 
+    <p>*CFL_6* 🎾🏏 ```Coming Soon``` </p>
+    <p>اگر کسی میمبر کو کوٸي راۓ دینی ہو یا کو بات کرنی ہو ٹورنامینٹ کے حوالے سے وہ گروپ ایڈمن سے ان بوکس مین رابتا کرے 
 ہماری کوشش ہے کے ہر سال کی طرح اس سال بھی فیس بک پر لاٸیو میچ دکھایا جاۓ 
 اور اس بار لائیو اسٹریم کے ساتھ لائیو اسکور بھی دکھایا جاۓ گا</p>
+    <p>*LiveStream With liveScore*
+```•Nabi Bukhah```
+```•Asif Ali```
+```•Muhsan Maxi```
+
+*Special Thanks*
+```•Sir Yasir Ali```
+```•Aijaz Lashari```
+
+*CFL Community*
+```•Sikandar Ali```
+```•Shezaad Ali```
+```•Hasan Raza```</p>
+    <h>CFL Teams</h>
   </div>
 
   <div id="homePage">
