--- a/index.html
+++ b/index.html
@@ -123,23 +123,13 @@
   <div class="welcome">
     <h1>Welcome to the CFL official website!.</h1>
     <p>*CFL_6* 🎾🏏 ```Coming Soon``` </p>
-    <p>اگر کسی میمبر کو کوٸي راۓ دینی ہو یا کو بات کرنی ہو ٹورنامینٹ کے حوالے سے وہ گروپ ایڈمن سے ان بوکس مین رابتا کرے 
-ہماری کوشش ہے کے ہر سال کی طرح اس سال بھی فیس بک پر لاٸیو میچ دکھایا جاۓ 
-اور اس بار لائیو اسٹریم کے ساتھ لائیو اسکور بھی دکھایا جاۓ گا</p>
-    <p>*LiveStream With liveScore*
-```•Nabi Bukhah```
-```•Asif Ali```
-```•Muhsan Maxi```
+  </div>
 
-*Special Thanks*
-```•Sir Yasir Ali```
-```•Aijaz Lashari```
-
-*CFL Community*
-```•Sikandar Ali```
-```•Shezaad Ali```
-```•Hasan Raza```</p>
-    <h>CFL Teams</h>
+  <div class="cflowners">
+    <h1>CFL OWNERS</h1>
+    <p>Sikander Ali</p>
+    <p>Shehzad Ali</p>
+    <p>Hasan Raza</p>
   </div>
 
   <div id="homePage">
@@ -151,27 +141,27 @@
       </div>
       <div class="team">
         <img src="t2.png" alt="Team 2 Logo">
-        <h3>Thunder Bolts</h3>
+        <h3>Balouch Raiders</h3>
         <button class="btn" onclick="openSquad('t2')">View Squad</button>
       </div>
       <div class="team">
         <img src="t3.png" alt="Team 3 Logo">
-        <h3>Golden Warriors</h3>
+        <h3>Flying Eagles</h3>
         <button class="btn" onclick="openSquad('t3')">View Squad</button>
       </div>
       <div class="team">
         <img src="t4.png" alt="Team 4 Logo">
-        <h3>Power Smashers</h3>
+        <h3>Haideri Legends</h3>
         <button class="btn" onclick="openSquad('t4')">View Squad</button>
       </div>
       <div class="team">
         <img src="t5.png" alt="Team 5 Logo">
-        <h3>Super Strikers</h3>
+        <h3>Super Kings</h3>
         <button class="btn" onclick="openSquad('t5')">View Squad</button>
       </div>
       <div class="team">
         <img src="t6.png" alt="Team 6 Logo">
-        <h3>Royal Challengers</h3>
+        <h3>Sultan Tigers</h3>
         <button class="btn" onclick="openSquad('t6')">View Squad</button>
       </div>
     </div>
@@ -206,11 +196,11 @@
       document.getElementById('squadPage').style.display = 'block';
       let teamName = '';
       if(teamId==='t1') teamName='Rising Stars';
-      if(teamId==='t2') teamName='Thunder Bolts';
-      if(teamId==='t3') teamName='Golden Warriors';
-      if(teamId==='t4') teamName='Power Smashers';
-      if(teamId==='t5') teamName='Super Strikers';
-      if(teamId==='t6') teamName='Royal Challengers';
+      if(teamId==='t2') teamName='Balouch Raiders';
+      if(teamId==='t3') teamName='Flying Eagles';
+      if(teamId==='t4') teamName='Haidari Legends';
+      if(teamId==='t5') teamName='Super Kings';
+      if(teamId==='t6') teamName='Sultan Tigers';
       document.getElementById('squadTitle').innerText = teamName + " - Staff & Squad";
     }
     function goBack() {
