--- a/index.html
+++ b/index.html
@@ -121,15 +121,12 @@
   </header>
 
   <div class="welcome">
-    <h1>Welcome to the CFL official website!.</h1>
-    <p>*CFL_6* 🎾🏏 ```Coming Soon``` </p>
+    <h1>🏆CFL SESSION 6🏏</h1>
+    <p>*```Coming Soon``` </p>
   </div>
-
   <div class="cflowners">
     <h1>CFL OWNERS</h1>
-    <p>Sikander Ali</p>
-    <p>Shehzad Ali</p>
-    <p>Hasan Raza</p>
+    <p>▪️Sikander Ali ⭐ Shehzad Ali ⭐ Hasan Raza▪️</p>
   </div>
 
   <div id="homePage">
