--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div id="squadPage" class="squad-page">
     <h2 id="squadTitle"></h2>
     <div class="staff">
-      <div><strong>Owner:</strong> <span id="ownerName">Owner Name</span></div>
+      <div><strong>Owner:</stron>g> <span id="ownerName">Owner Name</span></div>
       <div><strong>Head Coach:</strong> <span id="coachName">Head Coach Name</span></div>
       <div><strong>Players:</strong> <span id="playersList">Not announced yet</span></div>
     </div>
@@ -178,7 +178,64 @@
 
   <div class="extra">
     <h3>Announcements</h3>
-    <p id="announcement">No announcements yet.</p>
+    <p id="announcement">CFL-6 All Players divided in 4 Categories</p>
+  </div>
+  <div>
+<h3>Diamond Category Players</h3>
+    <p>•MD. Khan_____________________All_Rounder</p>
+    <p>•Kumail ______________________All Rounder</p>
+    <p>•Muntazir ____________________All Rounder</p>
+    <p>•Muhsan __________________Bat/All Rounder</p>
+    <p>•Zeshan _________________Bowl/All Rounder</p>
+    <p>•Fayaz __________________Bowl/All Rounder</p>
+</div>
+<div>
+<h3>Platinum Category Players</h3>
+    <p>•Nabi Bux_________________________Bowler</p>
+    <p>•Najaf____________________________Bowler</p>
+    <p>•AB Sadora_______________Bat/All Rounder</p>
+    <p>•Mureed__________________________Batsmam</p>
+    <p>•Rehan___________________Bat/All Rounder</p>
+    <p>•Asif Ali________________Bat All Rounder</p>
+</div>
+<div>
+<h3>Guest Players For Platinum Category</h3>
+    <p>•Mudasir________________________Batsman</p>
+    <p>•Foto_______________________All Rounder</p>
+    <p>•Hasnain ________________________Bowler</p>
+    <p>•Aasim __________________________Bowler</p>
+    <p>•Ali Zain ______________________Batsman</p>
+    <p>•Subhan ____________________All Rounder</p>
+</div>
+<div>
+<h3>Gold Category Players</h3>
+    <p>•Nana Sajjad ______________All Rounder</p>
+    <p>•Muzamil ______________________Batsman</p>
+    <p>•Kazim _________________________Bowler</p>
+    <p>•Mesam ________________________Batsman</p>
+    <p>•Zamin ________________________Batsman</p>
+    <p>•Zakir Hussain ____________All Rounder</p>
+</div>
+<div>
+<h3>Silver Category Players</h3>
+    <p>•Saqib _____________________Youngster</p>
+    <p>•Aqib Ali___________________Youngster</p>
+    <p>•Asad Ali___________________Youngster</p>
+    <p>•Farhan ____________________Youngster</p>
+    <p>•Safeer ____________________Youngster</p>
+    <p>•Gulam Hussain _____________Youngster</p>
+</div>
+<div>
+<h3>Silver 2 Category Players</h3>
+    <p>•Mevo khan________________Youngster_</p>
+    <p>•Faizan __________________Youngster_</p>
+    <p>•Sarfaraz ________________Youngster_</p>
+    <p>•Hasnain _________________Youngster_</p>
+    <p>•Saqlain _________________Youngster_</p>
+    <p>•Sakhawat ________________Youngster_</p>
+</div>
+  
+  <div class="extra">
     <h3>News</h3>
     <p id="news">No news yet.</p>
   </div>
