--- a/team1.html
+++ b/team1.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <img src="images/cfl-logo.png" alt="CFL Logo" width="100">
+    <img src="images/t1.png" alt="Rising Stars">
     <h1>Rising Stars</h1>
   </header>
 
