--- a/team1.html
+++ b/team1.html
@@ -14,7 +14,9 @@
 
   <div class="extra">
     <h2>Staff</h2>
+    <img src="images/t1owner.png" alt="Player 1" class="player-img">
     <p><strong>Owner:</strong> Ali Khan</p>
+    <img src="images/t1hc1.png" alt="Player 1" class="player-img">
     <p><strong>Head Coach:</strong> Rehan Ahmed</p>
   </div>
 
