--- a/team1.html
+++ b/team1.html
@@ -14,10 +14,10 @@
 
   <div class="extra">
     <h2>Staff</h2>
-    <img src="images/t1owner.png" alt="Player 1" class="player-img">
-    <p><strong>Owner:</strong> Ali Khan</p>
-    <img src="images/t1hc1.png" alt="Player 1" class="player-img">
-    <p><strong>Head Coach:</strong> Rehan Ahmed</p>
+    <img src="images/t1onr.png" alt="OWNER" class="player-img">
+    <p><strong>Owner:</strong> Hasan Raza</p>
+    <img src="images/t1hc1.png" alt="COACHING" class="player-img">
+    <p><strong>Head Coach:</strong> Shajahan</p>
   </div>
 
   <section class="players">
