--- a/team1.html
+++ b/team1.html
@@ -14,9 +14,9 @@
 
   <div class="extra">
     <h2>Staff</h2>
-    <img src="images/t1onr.png" alt="OWNER" class="player-img">
+    <img src="images/team1/t1onr.png" alt="OWNER" class="player-img">
     <p><strong>Owner:</strong> Hasan Raza</p>
-    <img src="images/t1hc1.png" alt="COACHING" class="player-img">
+    <img src="images/team1/t1hc1.png" alt="COACHING" class="player-img">
     <p><strong>Head Coach:</strong> Shajahan</p>
   </div>
 
@@ -24,7 +24,7 @@
     <h2>Players</h2>
 
     <div class="player-card">
-      <img src="images/t1p1.png" alt="Player 1" class="player-img">
+      <img src="images/team1/t1p1.png" alt="Player 1" class="player-img">
       <div class="player-info">
         <p><strong>Name:</strong> Player 1</p>
         <p><strong>Role:</strong> Batsman</p>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="player-card">
-      <img src="images/t1p2.png" alt="Player 2" class="player-img">
+      <img src="images/team1/t1p2.png" alt="Player 2" class="player-img">
       <div class="player-info">
         <p><strong>Name:</strong> Player 2</p>
         <p><strong>Role:</strong> Bowler</p>
