--- a/team1.html
+++ b/team1.html
@@ -15,9 +15,9 @@
   <div class="extra">
     <h2>Staff</h2>
     <img src="images/team1/t1onr.png" alt="OWNER" class="player-img">
-        <p><strong>Owner:</strong> Hasan Raza</p>
+    <p><strong>Owner:</strong> Hasan Raza</p>
     <img src="images/team1/t1hc1.png" alt="COACHING" class="player-img">
-        <p><strong>Head Coach:</strong> Shajahan</p>
+    <p><strong>Head Coach:</strong> Shajahan</p>
   </div>
 
   <section class="players">
@@ -26,10 +26,10 @@
     <div class="player-card">
       <img src="images/team1/t1p1.png" alt="Player 1" class="player-img">
       <div class="player-info">
-        <p>Name:<strong>Muhammad Khan</strong></p>
-        <p>Role:<strong>Batting All Rounder</strong></p>
-        <p>Batting Style:<strong>Right Hand</strong></p>
-        <p>Bowling Style:<strong>Right Arm Medium</strong></p>
+        <p>Name: <strong>Muhammad Khan Lashari</strong></p>
+        <p>Role: <strong>Batting All Rounder  </strong></p>
+        <p>Bat  :<strong>Right Hand Batsman   </strong></p>
+        <p>Bowl :<strong>Right Arm Medium.    </strong></p>
       </div>
     </div>
 
