--- a/team1.html
+++ b/team1.html
@@ -26,10 +26,10 @@
     <div class="player-card">
       <img src="images/team1/t1p1.png" alt="Player 1" class="player-img">
       <div class="player-info">
-        <p>Player Name____ <strong>Muhammad Khan Lashari</strong></p>
-        <p>Playing Role___ <strong>Batting All Rounder..</strong></p>
-        <p>Batting Style__ <strong>Right Hand Batsman...</strong></p>
-        <p>Bowling Style__ <strong>Right Arm Medium.....</strong></p>
+        <p>Player Name: <strong>Muhammad Khan</strong></p>
+        <p>Player Role: <strong>Batting All Rounder</strong></p>
+        <p>Batting Style: <strong>Right Hand Batsman</strong></p>
+        <p>Bowling Style: <strong>Right Arm Medium</strong></p>
       </div>
     </div>
 
