--- a/index.html
+++ b/index.html
@@ -54,6 +54,72 @@
       <a href="team6.html"><button class="btn">View Squad</button></a>
     </div>
   </section>
+  <!-- 🔥 CFL Matches Schedule Section -->
+<section class="matches" id="matches">
+  <h2>CFL-6 MATCHES SCHEDULE</h2>
+  <hr style="width:80%; border:1px solid #fff; opacity:0.4;">
+
+  <div class="match-day">
+    <h3>Day 1 - Friday</h3>
+    <p>Rising Stars 🆚 Haidari Legends<br>🗓️17 October 2025 🕞 3:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+    <p>Sultan Tigers 🆚 Super Kings<br>🗓️17 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>Day 2 - Saturday</h3>
+    <p>Balouch Raiders 🆚 Sultan Tigers<br>🗓️18 October 2025 🕞 3:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+    <p>Super Kings 🆚 Haidari Legends<br>🗓️18 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>Day 3 - Super Sunday</h3>
+    <p>Rising Stars 🆚 Super Kings<br>🗓️19 October 2025 🕞 3:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+    <p>Haidari Legends 🆚 Balouch Raiders<br>🗓️19 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>Day 4 - Monday</h3>
+    <p>Sultan Tigers 🆚 Rising Stars<br>🗓️20 October 2025 🕞 3:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+    <p>Balouch Raiders 🆚 Super Kings<br>🗓️20 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>Day 5 - Tuesday</h3>
+    <p>Sultan Tigers 🆚 Haidari Legends<br>🗓️21 October 2025 🕞 3:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+    <p>Rising Stars 🆚 Balouch Raiders<br>🗓️21 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>Playoffs</h3>
+    <p>1st Qualifier - TB1 🆚 TB2<br>🗓️22 October 2025 🕞 3:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+    <p>Eliminator - TB3 🆚 TB4<br>🗓️22 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>2nd Qualifier</h3>
+    <p>Q1L 🆚 EW<br>🗓️23 October 2025 🕞 4:00pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+
+  <div class="match-day">
+    <h3>Final - Friday</h3>
+    <p>Q1W 🆚 Q2W<br>🗓️24 October 2025 🕞 4:30pm</p>
+    <a class="btn" href="#">View Scorecard</a>
+  </div>
+</section>
+
 
   <div class="extra">
     <h3>Announcements</h3>
