--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 
   <div class="match-day">
     <h3>Day 1 - Friday</h3>
-    <p>Rising Stars 🆚 Haidari Legends<br>🗓️17 October 2025 🕞 3:30pm</p>
+    <p><srong>Rising Stars 🆚 Haidari Legends</srong><br>🗓️17 October 2025 🕞 3:30pm</p>
     <a class="btn" href="#">View Scorecard</a>
-    <p>Sultan Tigers 🆚 Super Kings<br>🗓️17 October 2025 🕞 4:30pm</p>
+    <p><srong>Sultan Tigers 🆚 Super Kings</srong><br>🗓️17 October 2025 🕞 4:30pm</p>
     <a class="btn" href="#">View Scorecard</a>
   </div>
 
   <div class="match-day">
     <h3>Day 2 - Saturday</h3>
-    <p>Balouch Raiders 🆚 Sultan Tigers<br>🗓️18 October 2025 🕞 3:30pm</p>
+    <p><srong>Balouch Raiders 🆚 Sultan Tigers</srong><br>🗓️18 October 2025 🕞 3:30pm</p>
     <a class="btn" href="#">View Scorecard</a>
     <p>Super Kings 🆚 Haidari Legends<br>🗓️18 October 2025 🕞 4:30pm</p>
     <a class="btn" href="#">View Scorecard</a>
