--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
     <h3>News</h3>
     <p>No news yet.</p>
   </div>
-
+<script src="overlay.js"></script>
+  
   <footer>
     © 2025 Children Fantasy League. All Rights Reserved.
   </footer>
