--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="match-day">
     <h3>Day 1 - Friday</h3>
     <p><srong>Rising Stars 🆚 Haidari Legends</srong><br>🗓️17 October 2025 🕞 3:30pm</p>
-    <a class="btn" href="#" data-scoreview data-teamA="t1" data-teamB="t4" data-match="m1">View Scorecard</a>
+    <a href="scorecard.html" class="view-btn">View Scorecard</a>
     <p><srong>Sultan Tigers 🆚 Super Kings</srong><br>🗓️17 October 2025 🕞 4:30pm</p>
     <a class="btn" href="#">View Scorecard</a>
   </div>
