--- a/overlay/scorecard.html
+++ b/overlay/scorecard.html
@@ -16,15 +16,15 @@
 
     <div class="teams-section">
       <div class="team">
-        <img src="images/nz.png" alt="New Zealand Logo" class="team-logo">
-        <h3>NEW ZEALAND</h3>
+        <img src="images/t1.png" alt="Rising Stars Logo" class="team-logo">
+        <h3>RISING STARS</h3>
       </div>
 
       <div class="vs">V</div>
 
       <div class="team">
-        <img src="images/eng.png" alt="England Logo" class="team-logo">
-        <h3>ENGLAND</h3>
+        <img src="images/t4.png" alt="Haideri Legends Logo" class="team-logo">
+        <h3>HAIDARI LEGENDS</h3>
       </div>
     </div>
 
@@ -32,19 +32,19 @@
       <div class="team-score">
         <h1>352-7</h1>
         <table>
-          <tr><td>MAXWELL</td><td>77</td><td>71</td></tr>
-          <tr><td>GREEN</td><td>50</td><td>40</td></tr>
-          <tr><td>INGLIS</td><td>50</td><td>40</td></tr>
-          <tr><td>WARNER</td><td>50</td><td>40</td></tr>
+          <tr><td>MAXWELL</td><td>77</td><td>(71)</td></tr>
+          <tr><td>GREEN</td><td>50</td><td>(40)</td></tr>
+          <tr><td>INGLIS</td><td>50</td><td>(40)</td></tr>
+          <tr><td>WARNER</td><td>50</td><td>(40)</td></tr>
         </table>
       </div>
 
       <div class="team-score">
         <h1>337</h1>
         <table>
-          <tr><td>BABAR</td><td>90</td><td>40</td></tr>
-          <tr><td>IFTIKHAR</td><td>83</td><td>40</td></tr>
-          <tr><td>NAWAZ</td><td>53</td><td>40</td></tr>
+          <tr><td>BABAR</td><td>90</td><td>(40)</td></tr>
+          <tr><td>IFTIKHAR</td><td>83</td><td>(40)</td></tr>
+          <tr><td>NAWAZ</td><td>53</td><td>(40)</td></tr>
           <tr><td>FAKHAR</td><td>24</td><td>40</td></tr>
         </table>
       </div>
@@ -72,7 +72,6 @@
 
     <div class="match-result">
       <h2>AUSTRALIA WON BY 14 RUNS</h2>
-      <p>MATCH #01</p>
     </div>
   </div>
 
