--- a/overlay/scorecard.html
+++ b/overlay/scorecard.html
@@ -16,14 +16,14 @@
 
     <div class="teams-section">
       <div class="team">
-        <img src="images/t1.png" alt="Rising Stars Logo" class="team-logo">
+        <img src="images/t1.png" alt="Rising Stars">
         <h3>RISING STARS</h3>
       </div>
 
       <div class="vs">V</div>
 
       <div class="team">
-        <img src="images/t4.png" alt="Haideri Legends Logo" class="team-logo">
+        <img src="images/t4.png" alt="Haideri Legends Logo">
         <h3>HAIDARI LEGENDS</h3>
       </div>
     </div>
