--- a/overlay/scorecard.html
+++ b/overlay/scorecard.html
@@ -11,7 +11,7 @@
   <div class="overlay-container">
 
     <div class="overlay-header">
-      <h2>ICC MEN'S CRICKET WORLD CUP INDIA 2023</h2>
+      <h2>CFL-6 Children Fantasy League 2025</h2>
     </div>
 
     <div class="teams-section">
