--- a/overlay/scorecard.html
+++ b/overlay/scorecard.html
@@ -14,7 +14,7 @@
       <h2>CFL-6 Children Fantasy League 2025</h2>
     </div>
 
-    <section class="teams">
+    <div class="teams">
       <div class="team">
         <img src="images/t1.png" alt="Rising Stars">
         <h3>RISING STARS</h3>
