--- a/overlay/scorecard.html
+++ b/overlay/scorecard.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Match Scorecard</title>
-  <link rel="stylesheet" href="overlay.css">
+  <link rel="stylesheet" href="overlay.css" />
 </head>
 <body>
 
@@ -16,36 +16,38 @@
 
     <div class="teams-section">
       <div class="team">
-        <img src="images/t1.png" alt="Rising Stars">
+        <img src="overlay/images/t1.png" alt="Rising Stars" />
         <h3>RISING STARS</h3>
       </div>
 
-      <div class="vs">V</div>
+      <div class="vs-box">
+        <span>VS</span>
+      </div>
 
       <div class="team">
-        <img src="images/t4.png" alt="Haideri Legends Logo">
+        <img src="overlay/images/t4.png" alt="Haideri Legends Logo" />
         <h3>HAIDARI LEGENDS</h3>
       </div>
     </div>
 
     <div class="score-section">
       <div class="team-score">
-        <h1>352-7</h1>
+        <h1 class="score">352-7</h1>
         <table>
-          <tr><td>MAXWELL</td><td>77</td><td>(71)</td></tr>
-          <tr><td>GREEN</td><td>50</td><td>(40)</td></tr>
-          <tr><td>INGLIS</td><td>50</td><td>(40)</td></tr>
-          <tr><td>WARNER</td><td>50</td><td>(40)</td></tr>
+          <tr><td>MAXWELL</td><td>77 (71)</td></tr>
+          <tr><td>GREEN</td><td>50 (40)</td></tr>
+          <tr><td>INGLIS</td><td>50 (40)</td></tr>
+          <tr><td>WARNER</td><td>50 (40)</td></tr>
         </table>
       </div>
 
       <div class="team-score">
-        <h1>337</h1>
+        <h1 class="score">337</h1>
         <table>
-          <tr><td>BABAR</td><td>90</td><td>(40)</td></tr>
-          <tr><td>IFTIKHAR</td><td>83</td><td>(40)</td></tr>
-          <tr><td>NAWAZ</td><td>53</td><td>(40)</td></tr>
-          <tr><td>FAKHAR</td><td>24</td><td>40</td></tr>
+          <tr><td>BABAR</td><td>90 (40)</td></tr>
+          <tr><td>IFTIKHAR</td><td>83 (40)</td></tr>
+          <tr><td>NAWAZ</td><td>53 (40)</td></tr>
+          <tr><td>FAKHAR</td><td>24 (40)</td></tr>
         </table>
       </div>
     </div>
@@ -54,18 +56,18 @@
       <div class="overs">
         <h3>50 OVERS</h3>
         <table>
-          <tr><td>USAMA</td><td>2-31</td><td>5</td></tr>
-          <tr><td>NAWAZ</td><td>1-34</td><td>6</td></tr>
-          <tr><td>WASIM</td><td>1-63</td><td>8</td></tr>
+          <tr><td>USAMA</td><td>2-31 (5)</td></tr>
+          <tr><td>NAWAZ</td><td>1-34 (6)</td></tr>
+          <tr><td>WASIM</td><td>1-63 (8)</td></tr>
         </table>
       </div>
 
       <div class="overs">
         <h3>47.4 OVERS</h3>
         <table>
-          <tr><td>CUMMINS</td><td>2-34</td><td>6</td></tr>
-          <tr><td>ZAMPA</td><td>2-34</td><td>6</td></tr>
-          <tr><td>ABBOTT</td><td>2-34</td><td>6</td></tr>
+          <tr><td>CUMMINS</td><td>2-34 (6)</td></tr>
+          <tr><td>ZAMPA</td><td>2-34 (6)</td></tr>
+          <tr><td>ABBOTT</td><td>2-34 (6)</td></tr>
         </table>
       </div>
     </div>
@@ -75,6 +77,6 @@
     </div>
   </div>
 
-<script src="overlay.js"></script>
+  <script src="overlay.js"></script>
 </body>
 </html>
