--- a/overlay/scorecard.html
+++ b/overlay/scorecard.html
@@ -16,7 +16,7 @@
 
     <div class="teams-section">
       <div class="team">
-        <img src="overlay/images/t1.png" alt="Rising Stars" />
+        <img src="../images/t1.png" alt="Rising Stars">
         <h3>RISING STARS</h3>
       </div>
 
@@ -25,7 +25,7 @@
       </div>
 
       <div class="team">
-        <img src="overlay/images/t4.png" alt="Haideri Legends Logo" />
+        <img src="../images/t4.png" alt="Haideri Legends">
         <h3>HAIDARI LEGENDS</h3>
       </div>
     </div>
